<resources>
    <string name="app_name">start</string>
    <string name="tx1">happy birthday</string>
    <string name="tx2"> your tom</string>
    <string name="inputwd">inputxx</string>
    <string name="change">changehuashi</string>
    <string name="answer">answer</string>
    <string name="team1">team1</string>
    <string name="team2">team2</string>
    <string name="score1">0</string>
    <string name="score2">0</string>
    <string name="sc1">+1</string>
    <string name="sc2">+2</string>
    <string name="sc3">+3</string>
    <string name="sc6">+3</string>
    <string name="sc5">+2</string>
    <string name="sc4">+1</string>
    <string name="reset1">reset</string>
    <string name="inputmoney">input reat</string>
    <string name="showout">hello</string>
    <string name="dollar">dollar</string>
    <string name="euro">euro</string>
    <string name="won">won</string>
    <string name="open">open</string>
    <string name="inputchange">input</string>
    <string name="menurate">setting</string>
    <string name="listRate">listRate</string>
    <string name="mylist">mylist</string>
    <string name="Search">search</string>
    <string name="chaxun">chaxun</string>
    <string name="tongzhi">tongzhi</string>
    <string name="nodata">no data</string>
</resources>
