<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SearchActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tongzhi"
        android:textSize="36sp" />

    <EditText
        android:id="@+id/Search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Search"
        android:inputType="textPersonName"
        android:textSize="36sp" />

    <Button
        android:id="@+id/chaxun"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/chaxun"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/answer"
        android:textSize="36sp" />

    <ListView
        android:id="@+id/listitem"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>