<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".week4Activity">

    <EditText
        android:id="@+id/tx_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/inputwd"
        android:inputType="number"
        android:textSize="36sp" />

    <Button
        android:id="@+id/bnt_ch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tx_out"
        android:layout_marginBottom="16dp"
        android:text="@string/change" />

    <TextView
        android:id="@+id/tx_an"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bnt_ch"
        android:text="@string/answer"
        android:textSize="30sp" />

</RelativeLayout>